--- a/HospitalApp-web/src/main/webapp/Anamnesis.xhtml
+++ b/HospitalApp-web/src/main/webapp/Anamnesis.xhtml
@@ -30,13 +30,13 @@
                     <p:panel>
                         <p:panelGrid columns="2">
                             <p:outputLabel value="F.U.R. "/>
-                            <p:calendar pattern="dd/mm/yy" style="width: 50px;" value="#{anamnesisMB.fur}"/>
+                            <p:calendar pattern="dd/mm/yy" style="width: 50px;" value="#{anamnesisMB.fur}" styleClass="dateTimeField"/>
                             <p:outputLabel value="F.U.R.op. "/>
-                            <p:calendar pattern="dd/mm/yy" style="width: 50px;" value="#{anamnesisMB.furop}"/>
+                            <p:calendar pattern="dd/mm/yy" style="width: 50px;" value="#{anamnesisMB.furop}" styleClass="dateTimeField"/>
                             <p:outputLabel value="F.P.P. "/>
-                            <p:calendar pattern="dd/mm/yy" style="width: 50px;" value="#{anamnesisMB.fpp}"/>
+                            <p:calendar pattern="dd/mm/yy" style="width: 50px;" value="#{anamnesisMB.fpp}" styleClass="dateTimeField"/>
                             <p:outputLabel value="Eco. precoz "/>
-                            <p:calendar pattern="dd/mm/yy" style="width: 50px;" value="#{anamnesisMB.ecoPrecoz}"/>
+                            <p:calendar pattern="dd/mm/yy" style="width: 50px;" value="#{anamnesisMB.ecoPrecoz}" styleClass="dateTimeField"/>
                             <p:outputLabel value="EG "/>
                             <p:inputText style="width: 50px;" value="#{anamnesisMB.eg}"/>
                             <p:outputLabel value="Acorde "/>
@@ -53,7 +53,7 @@
                                 </f:facet>
                                 <p:row>
                                     <p:column colspan="4">
-                                        <p:inputText style="width: 10px;" value="#{anamnesisMB.gestas}"/>
+                                        <p:inputText style="width: 15px;" maxlength="2" validatorMessage="El campo debe ser un numero de a lo más 2 dígitos." value="#{anamnesisMB.gestas}"/>
                                     </p:column>
                                 </p:row>
                                 <p:row>
@@ -66,10 +66,10 @@
                                 </p:row>
                                 <p:row>
                                     <p:column colspan="2">
-                                        <p:inputText style="width: 10px;" value="#{anamnesisMB.partos}"/>
+                                        <p:inputText style="width: 15px;" maxlength="2" validatorMessage="El campo debe ser un numero de a lo más 2 dígitos." value="#{anamnesisMB.partos}"/>
                                     </p:column>
                                     <p:column colspan="2">
-                                        <p:inputText style="width: 10px;" value="#{anamnesisMB.abortos}"/>
+                                        <p:inputText style="width: 15px;" maxlength="2" validatorMessage="El campo debe ser un numero de a lo más 2 dígitos." value="#{anamnesisMB.abortos}"/>
                                     </p:column>
                                 </p:row>
                                 <p:row>
@@ -82,23 +82,23 @@
                                 </p:row>
                                 <p:row>
                                     <p:column>
-                                        <p:inputText style="width: 10px;" value="#{anamnesisMB.vaginales}"/>
+                                        <p:inputText style="width: 15px;" maxlength="2" validatorMessage="El campo debe ser un numero de a lo más 2 dígitos." value="#{anamnesisMB.vaginales}"/>
                                     </p:column>
                                     <p:column>
-                                        <p:inputText style="width: 10px;" value="#{anamnesisMB.cesareas}"/>
+                                        <p:inputText style="width: 15px;" maxlength="2" validatorMessage="El campo debe ser un numero de a lo más 2 dígitos." value="#{anamnesisMB.cesareas}"/>
                                     </p:column>
                                 </p:row>
                                 <p:row>
                                     <p:column colspan="2">Último embarazo: </p:column>
-                                    <p:column colspan="2"><p:calendar pattern="dd/mm/yy" value="#{anamnesisMB.ultimoEmbarazo}"/></p:column>
+                                    <p:column colspan="2"><p:calendar pattern="dd/mm/yy" value="#{anamnesisMB.ultimoEmbarazo}" styleClass="dateTimeField"/></p:column>
                                 </p:row>
                                 <p:row>
                                     <p:column colspan="2">RN mayor peso</p:column>
-                                    <p:column colspan="2"><p:inputText style="width: 50px;" value="#{anamnesisMB.mayorPeso}"/></p:column>
+                                    <p:column colspan="2"><p:inputText style="width: 50px;" value="#{anamnesisMB.mayorPeso}" placeholder="Gramos"/></p:column>
                                 </p:row>
                                 <p:row>
                                     <p:column colspan="2">RN menor peso</p:column>
-                                    <p:column colspan="2"><p:inputText style="width: 50px;" value="#{anamnesisMB.menorPeso}"/></p:column>
+                                    <p:column colspan="2"><p:inputText style="width: 50px;" value="#{anamnesisMB.menorPeso}" placeholder="Gramos"/></p:column>
                                 </p:row>
                             </p:panelGrid>
                         </div>
@@ -122,11 +122,11 @@
             <p:tab id="ExamenFisico" title="Exámen Físico">
                 <p:panelGrid columns="2">
                     <p:outputLabel for="PA" value="Presión arterial: "/>
-                    <p:inputText id="PA" value="#{anamnesisMB.presionArterial}"/>
+                    <p:inputText id="PA" value="#{anamnesisMB.presionArterial}" maxlength="3" validatorMessage="El campo debe ser un numero de a lo más 3 dígitos"/>
                     <p:outputLabel for="Temp" value="Temperatura: "/>
-                    <p:inputText id="Temp" value="#{anamnesisMB.temperatura}"/>
+                    <p:inputText id="Temp" value="#{anamnesisMB.temperatura}" maxlength="2" validatorMessage="El campo debe ser un numero de a lo más 2 dígitos"/>
                     <p:outputLabel for="Pulso" value="Pulso: "/>
-                    <p:inputText id="Pulso" value="#{anamnesisMB.pulso}"/>
+                    <p:inputText id="Pulso" value="#{anamnesisMB.pulso}" maxlength="3" validatorMessage="El campo debe ser un numero de a lo más 3 dígitos"/>
                     <p:outputLabel for="Peso" value="Peso: "/>
                     <p:inputText id="Peso" value="#{anamnesisMB.peso}"/>
                     <p:outputLabel for="Talla" value="Talla: "/>
@@ -134,16 +134,16 @@
                     <p:outputLabel for="IMC" value="IMC: "/>
                     <p:inputText id="IMC" value="#{anamnesisMB.imc}" readonly="true"/>
                 </p:panelGrid>
-                <p:commandButton action="#{anamnesisMB.calcularIMC(actionEvent)}" value="Calcular IMC" update="IMC"/>
+                <p:commandButton action="#{anamnesisMB.calcularIMC(actionEvent)}" value="Calcular IMC" update="IMC, :Anamnesis:growl"/>
             </p:tab>
             <p:tab title="Exámen Obstétrico">
                 <p:panelGrid columns="6">
                     <p:outputLabel value="A.U. "/>
-                    <p:inputText style="width: 15px;" value="#{anamnesisMB.alturaUterina}"/>
+                    <p:inputText style="width: 15px;" value="#{anamnesisMB.alturaUterina}" placeholder="cm."/>
                     <p:outputLabel value="L.C.F. "/>
-                    <p:inputText style="width: 15px;" value="#{anamnesisMB.lcf}"/>
+                    <p:inputText style="width: 15px;" value="#{anamnesisMB.lcf}" placeholder="lpm"/>                    
                     <p:outputLabel value="D.U. "/>
-                    <p:inputText style="width: 15px;" value="#{anamnesisMB.du}"/>
+                    <p:inputText style="width: 50px;" value="#{anamnesisMB.du}"/>
                 </p:panelGrid>
                 <p:outputLabel value="Presentación"/>
                 <p:selectOneRadio value="#{anamnesisMB.presentacion}">
@@ -220,7 +220,7 @@
                     <p:outputLabel value="Motivo"/>
                     <p:inputText value="#{anamnesisMB.motivoUltimaConsulta}"/>
                     <p:outputLabel value="Último control"/>
-                    <p:inputText value="#{anamnesisMB.ultimoControl}"/>
+                    <p:calendar value="#{anamnesisMB.ultimoControl}" pattern="dd/mm/yy" styleClass="dateTimeField"/>
                 </p:panelGrid>
             </p:tab>
             <p:tab title="Diagnósticos">
