Anamensis con impresion

--- a/HospitalApp-web/src/main/webapp/Anamnesis.xhtml
+++ b/HospitalApp-web/src/main/webapp/Anamnesis.xhtml
@@ -10,7 +10,7 @@
             <p:outputLabel value="Nombre: "/>
             <p:outputLabel value="#{anamnesisMB.paciente.idPersona.persNombres} #{anamnesisMB.paciente.idPersona.persApepaterno}"/>
             <p:outputLabel value="Edad: "/>
-            <p:outputLabel value="## años"/>
+            <p:outputLabel value="#{anamnesisMB.edad} años"/>
             <p:outputLabel value="Rut: "/>
             <p:outputLabel value="#{anamnesisMB.paciente.idPersona.persRut}-#{anamnesisMB.paciente.idPersona.persDv}"/>            
         </p:panelGrid>
