Anamensis con impresion

--- a/HospitalApp-web/src/main/webapp/VisualizarAnamnesis.xhtml
+++ b/HospitalApp-web/src/main/webapp/VisualizarAnamnesis.xhtml
@@ -57,7 +57,7 @@
         <h:form id="editarAnamnesis">
             <p:accordionPanel multiple="true">
                 <p:tab title="Anamnesis">
-                    <p:inputTextarea style="height: 100%; width: 100%" value="#{buscarAnamnesis.anamnesisPaciente.anamDescripcion}"/>
+                    <p:inputTextarea style="width: 100%;" value="#{buscarAnamnesis.anamnesisPaciente.anamDescripcion}"/>
                 </p:tab>
                 <p:tab title="Historia Obstétrica">
                     <p:panelGrid columns="3">
@@ -257,10 +257,10 @@
                     </p:panelGrid>
                 </p:tab>
                 <p:tab title="Diagnósticos">
-                    <p:inputTextarea style="height: 100%; width: 100%" value="#{buscarAnamnesis.anamnesisPaciente.anamDiagnostico}"/>
+                    <p:inputTextarea style="width: 100%;" value="#{buscarAnamnesis.anamnesisPaciente.anamDiagnostico}"/>
                 </p:tab>
                 <p:tab title="Indicaciones">
-                    <p:inputTextarea style="height: 100%; width: 100%" value="#{buscarAnamnesis.anamnesisPaciente.anamIndicaciones}"/>
+                    <p:inputTextarea style="width: 100%;" value="#{buscarAnamnesis.anamnesisPaciente.anamIndicaciones}"/>
                 </p:tab>
             </p:accordionPanel>
             <br/>
